spacing fix

--- a/css/style.css
+++ b/css/style.css
@@ -233,9 +233,9 @@ header .introduction p {
 }
 
 .about_text p {
-  font-size: 1em;
+  font-size: 0.8em;
   padding: 1px;
-  margin: 0px 12px;
+  margin: 0px 10px;
   color: #FFFFFF;
 }
 
